# mlx

./: .gitignore  Makefile  README.md  pyproject.toml
ml/feature_engineering/: derivative_features_extractor.py  factory.py  protocol.py
ml/feature_engineering/factors/: f_ind.py  f_mlp.py  interface.py
ml/generator/: lr12.py  protocol.py
task/: wecom.py
tests/: test_playground_create_features_table.ipynb  test_playground_train_model.ipynb
