[tool.poetry]
name = "mlx"
version = "0.0.1"
description = ""
authors = ["wangxi <xib1102@icloud.com>"]
readme = "README.md" 

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.3"
plotly = "^5.9.0"
numpy = "^1.23.2"
scikit-learn = "^1.1.2"
sqlalchemy = "^1.4.40"
mysql = "^0.0.3"
pandas-ta = "^0.3.14-beta.0"
typing-extensions = "^4.3.0"
myloginpath = "^0.0.3"
feather-format = "^0.4.1"
nbformat = "^5.4.0"
matplotlib = "^3.6.2"
arch = "^5.3.1"
xgboost = "^1.7.1"
tensorflow = "^2.10.0"
ta-lib = "^0.4.25"
tsfresh = "^0.19.0"
statsmodels = "^0.13.5"

[tool.poetry.dev-dependencies]
pip = "^22.1.3"
pytest = "^7.1.2"
pylint = "^2.14.5"
black = { version = "^22.6.0", allow-prereleases = true }
ipykernel = "^6.15.1"
mypy = "^0.971"

[tool.poetry.group.dev.dependencies]
pandas-datareader = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = ''

[tool.isort]
profile = "black"

[tool.pylint.BASIC]
good-names = ["a", "b", "c", "d", "df", "i", "logger", "n", "tz", "id", "x", "y"]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = "C,attribute-defined-outside-init,fixme,too-few-public-methods,duplicate-code,logging-fstring-interpolation,too-many-boolean-expressions,too-many-instance-attributes,too-many-arguments,chained-comparison"
